--- a/views/message.ejs
+++ b/views/message.ejs
@@ -4,9 +4,9 @@
     <a href="/">Back to messages</a>
     <ul>
       <li>
-        <%= message.user %>: <%= message.text %>
+        <%= message.username %>: <%= message.text %>
         <br />
-        Date: <%= message.added.toDateString() %>
+        Date: <%= message.date.toDateString() %>
       </li>
     </ul>
   </body>
